Update information to present

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 <h4 class="widget-title">Learn About Me</h4>
                                 <p>Programming started as a hobby for me when I was about 12 years old. I started writing code for the video game Minecraft. At first I was just learning how I could display simple text in the console and in game when the player typed a command. After learning the basics, I moved into creating server side plugins which were tools that added features to the game and could be utilized by server owners and players.</p>
                                 <br>
-                                <p>Currently I am a third year in the undergraduate computer science program at Western Washington University where I participate in a college eSports team, enjoy being apart of the snowboard class that is offered in the winter, and write code for projects that I love.</p>
+                                <p>Currently I am a senior in the undergraduate computer science program at Western Washington University where I participate in a college eSports team, enjoy being apart of the snowboard class that is offered in the winter, and write code for projects that I love.</p>
                                 <hr>
                             </div>
                         </div>
@@ -144,7 +144,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <h4 class="widget-title">My Hobbies</h4>
-                                <p>When I'm not infront of a computer or pursuing my education, I enjoy being in the out doors. Since I was blessed with living and growing up in the beautiful Pacific Northwest I have been able to enjoy the boundless amount of activities that the PNW has to offer.</p>
+                                <p>When I'm not infront of a computer or pursuing my education, I enjoy being in the outdoors. Since I was blessed with living and growing up in the beautiful Pacific Northwest I have been able to enjoy the boundless amount of activities that the PNW has to offer.</p>
                                 <br>
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                                     <div class="project-hover">
                                         <div class="inside">
                                             <h5><a href="#">Snowboarding</a></h5>
-                                            <p>Ever since I was about 8 years old I've been spending a great deal of my winter free time on the mountains around me.</p>
+                                            <p>Ever since I was about 8 years old I've been spending a great deal of my winter free time on the mountains around me. I enjoy snowboarding on all different types of runs, everything from normal groomed runs to terrain parks and back country.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -166,7 +166,7 @@
                                     <div class="project-hover">
                                         <div class="inside">
                                             <h5><a href="#">Scuba Diving</a></h5>
-                                            <p>During the Summer of 2017 I was fortunate enough to be able to dive the Great Blue Hole off the coast of Belize.</p>
+                                            <p>I was certified at the age of 13 and I've been fortunate enough to go on a handful of dives across the world. During the Summer of 2017 I dove the Great Blue Hole off the coast of Belize.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -177,7 +177,7 @@
                                     <div class="project-hover">
                                         <div class="inside">
                                             <h5><a href="#">eSports</a></h5>
-                                            <p>I'm currently active in a College eSports League, Collegiate Starleague, for the videogame League of Legends.</p>
+                                            <p>Participating in eSports is a big hobby of mine, I enjoy being able to practice and participate with my fellow students at Western Washington University. I'm currently active in a College eSports League, Collegiate Starleague, for the videogame League of Legends.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -219,18 +219,18 @@
                                     <h6>April - May 2018</h6>
                                     <p>Microshell was a project where we developed our own shell that could execute commands, parse the arguments in a command, and handle commands with pipes.</p>
                                 </a>
+                                <a class="project-column-holder" target="_blank"></a>
                                 <a class="project-column" href="https://www.github.com/matcarter" title="More" target="_blank">
                                     <h5>More to come</h5>
                                     <h6>July 2018 - Present</h6>
-                                    <p>I was late to managing my projects on GitHub so I currently only have a few repositories listed. Check back to see when more are added.</p>
+                                    <p>These are my latest projects but there will be more to come in the future.</p>
                                 </a>
-                                <a class="project-column-holder" target="_blank"></a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-12">
                                 <br>
-                                <p>* Projects who's source is not publicly available since they were projects for a college course. If you're interested in learning more about the proejct please get in touch with me and I would be more than happy to show the work that was put into it.</p>
+                                <p>* Projects who's source is not publicly available since they were projects for a college course. If you're interested in learning more about the project please get in touch with me and I would be more than happy to show the work that was put into it.</p>
                             </div>
                         </div>
                     </div> <!-- #projects -->
@@ -247,22 +247,25 @@
                             <div class="col-md-12">
                                 <h4 class="education-college">Western Washington University <small>Fall 2017 - Spring 2020</small></h4>
                                 <div class="col-sm-6">
-                                    <h5 class="education-quarter">Previous Courses</h5>
+                                    <h5 class="education-quarter">Completed Courses</h5>
                                     <h6 class="education-class">CSCI 247 - Computer Systems I</h6>
                                     <h6 class="education-class">CSCI 301 - Formal Language & Functional Programming</h6>
                                     <h6 class="education-class">CSCI 305 - Analysis of Algorithms I</h6>
+                                    <h6 class="education-class">CSCI 330 - Database Systems</h6>
                                     <h6 class="education-class">CSCI 345 - Object Oriented Design</h6>
                                     <h6 class="education-class">CSCI 347 - Computer Systems II</h6>
                                     <h6 class="education-class">CSCI 367 - Computer Networks I</h6>
+                                    <h6 class="education-class">CSCI 511 - Analysis of Algorithms</h6>
                                 </div>
                                 <div class="col-sm-6">
                                     <h5 clsas="education-quarter">Current Courses</h5>
-                                    <h6 class="education-class">CSCI 511 - Analysis of Algorithms</h6>
-                                    <h6 class="education-class">CSCI 330 - Database Systems</h6>
-                                    <h6 class="education-class">MATH 331 - Oridnary Differential Equations</h6>
+                                    <h6 class="education-class">CSCI 491 - Senior Series I</h6>
+                                    <h6 class="education-class">CSCI 509 - Operating System Internals</h6>
+                                    <h6 class="education-class">CSCI 510 - Automata and Formal Language Theory</h6>
                                 </div>
                                 <div class="col-md-12">
                                     <h6 class="education-class">MATH 204 - Elementary Linear Algebra</h6>
+                                    <h6 class="education-class">MATH 331 - Oridnary Differential Equations</h6>
                                     <h6 class="education-class">MATH 341 - Probability and Statistics</h6>
                                 </div>
                             </div>
@@ -292,28 +295,28 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <h5>Christenson Electric <small>IT Systems Admin Intern</small></h5>
+                                <h5>Software Development Engineer Intern <small>Micro Focus</small></h5>
                                 <div class="col-md-12">
-                                    <h6>Summer 2018</h6>
-                                    <p>During the summer of 2018 my responsibilities at Christenson consisted mostly of working with their cloud based application to help quicken work effiency and speed. My job was to design and develop new interactions with the forms such as submit and clear buttons along with designing a more modern interface for submission fields within the forms.</p>
-                                </div>
-                                <div class="col-md-12">
-                                    <h6>Summer 2017</h6>
-                                    <p>During the summer of 2017 my responsibilities at Christenson began to change as I started working with their new cloud based application in which they wanted to transfer most of their paper forms so that the technicians outside of the office would be able to fill them out on their iPads. My job was to become familiar with the new system and begin creating replica forms that had virtual fields that could be used to submit data.</p>
-                                </div>
-                                <div class="col-md-12">
-                                    <h6>Summer 2016</h6>
-                                    <p>During the summer of 2016 was my first summer as an IT Systems Admin Intern at Christenson Electric where I developed new technical, problem solving, and interpersonal skills in order to efficently diagnose a problem, come up with a solution, and implement said solution. I also became familiar with the basics of networking, building and deploying new workstations, and managing the office's general IT needs.</p>
+                                    <h6>June - September 2019</h6>
+                                    <p>At Micro Focus I held many responsibilities as a software engineer intern. Most of my duties were centered around the main project that I was working on which was an internal web app. The web app was a project to increase team efficiency and productivity. The web app was implemented using the VueJS framework and was a central location for the most used information and tools such as links, build statuses, test runs, and more. I leveraged GitLab CI/CD for automatically installing the latest builds on a cluster of VMs and used Docker for creating images and containers with the latest builds.</p>
                                 </div>
                             </div>
                         </div>
                         <br>
                         <div class="row">
                             <div class="col-md-12">
-                                <h5>G6 Airpark <small>Court Monitor</small></h5>
+                                <h5>IT Systems Admin Intern <small>Christenson Electric</small></h5>
                                 <div class="col-md-12">
-                                    <h6>January - August 2015</h6>
-                                    <p>At G6 Airpark I was tasked with watching over different sections of the trampoline park to ensure that our customers were having a safe and enjoyable time on the trampolines. I quickly develoepd interpersonal skills that helped me communicate to our customers that our priority was their well-being and that they were having a fun time.</p>
+                                    <h6>June - September 2018</h6>
+                                    <p>During the summer of 2018 my responsibilities at Christenson consisted mostly of working with their cloud based application to help quicken work efficiency and speed. My job was to design and develop new interactions with the forms such as submit and clear buttons along with designing a more modern interface for submission fields within the forms.</p>
+                                </div>
+                                <div class="col-md-12">
+                                    <h6>June - September 2017</h6>
+                                    <p>During the summer of 2017 my responsibilities at Christenson began to change as I started working with their new cloud based application in which they wanted to transfer most of their paper forms so that the technicians outside of the office would be able to fill them out on their iPads. My job was to become familiar with the new system and begin creating replica forms that had virtual fields that could be used to submit data.</p>
+                                </div>
+                                <div class="col-md-12">
+                                    <h6>June - September 2016</h6>
+                                    <p>During the summer of 2016 was my first summer as an IT Systems Admin Intern at Christenson Electric where I developed new technical, problem solving, and interpersonal skills in order to efficiently diagnose a problem, come up with a solution, and implement said solution. I also became familiar with the basics of networking, building and deploying new workstations, and managing the office's general IT needs.</p>
                                 </div>
                             </div>
                         </div>
