Update projects and Update Resume

--- a/index.html
+++ b/index.html
@@ -195,10 +195,29 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
+                                <a class="project-column" title="StarCraft AI" target="_blank">
+                                    <h5>StarCraft: Brood War AI</h5>
+                                    <h6>September 2019 - Present</h6>
+                                    <p>With a team of 4 other CS undergraduates, we're working on developing a system to play StarCraft using AI Planning and Reinforcement Learning.</p>
+                                </a>
+                                <a class="project-column" title="Operating System Kernel" target="_blank">
+                                    <h5>Mini OS Kernel *</h5>
+                                    <h6>September 2019 - Present</h6>
+                                    <p>A quarter long project for CSCI 509 where we develop our own mini kernel.</p>
+                                </a>
+                                <a class="project-column" title="Adversarial Machine Learning" target="_blank">
+                                    <h5>Adversarial Machine Learning Research</h5>
+                                    <h6>January 2018 - Present</h6>
+                                    <p>Research with Dr. Michael Tsikerdekis for approaches to fake content detection and the strengths and weaknesses of adversarial attacks.</p>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
                                 <a class="project-column" href="https://www.github.com/matcarter/macarter.net" title="Website" target="_blank">
                                     <h5>This Website</h5>
                                     <h6>July 2018 - Present</h6>
-                                    <p>A project to familiarize myself with HTML and CSS by creating a portfolio website.</p>
+                                    <p>A project to familiarize myself with HTML, CSS, and Bootstrap by creating a portfolio website.</p>
                                 </a>
                                 <a class="project-column" href="https://www.github.com/matcarter/scoutbot" title="ScoutBot" target="_blank">
                                     <h5>ScoutBot</h5>
@@ -208,7 +227,7 @@
                                 <a class="project-column" title="Deadwood-Studios-USA" target="_blank">
                                     <h5>Deadwood Studios *</h5>
                                     <h6>May - June 2018</h6>
-                                    <p>Deadood was a project where we took a real board game (Deadwood Studios USA) and turned it into a video game with a GUI.</p>
+                                    <p>Deadood was a project I worked on with another student, we took a real board game (Deadwood Studios USA) and turned it into a video game with a GUI.</p>
                                 </a>
                             </div>
                         </div>
@@ -219,18 +238,18 @@
                                     <h6>April - May 2018</h6>
                                     <p>Microshell was a project where we developed our own shell that could execute commands, parse the arguments in a command, and handle commands with pipes.</p>
                                 </a>
-                                <a class="project-column-holder" target="_blank"></a>
                                 <a class="project-column" href="https://www.github.com/matcarter" title="More" target="_blank">
                                     <h5>More to come</h5>
                                     <h6>July 2018 - Present</h6>
-                                    <p>These are my latest projects but there will be more to come in the future.</p>
+                                    <p>These are my latest projects but checkout my github for the most recent updates.</p>
                                 </a>
+                                <a class="project-column-holder" target="_blank"></a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-12">
                                 <br>
-                                <p>* Projects who's source is not publicly available since they were projects for a college course. If you're interested in learning more about the project please get in touch with me and I would be more than happy to show the work that was put into it.</p>
+                                <p>* Projects who's source is not publicly available since they were projects for a college course. If you're interested in learning more about the project, please get in touch with me and I would be more than happy to show the work that was put into it.</p>
                             </div>
                         </div>
                     </div> <!-- #projects -->
@@ -246,7 +265,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <h4 class="education-college">Western Washington University <small>Fall 2017 - Spring 2020</small></h4>
-                                <div class="col-sm-6">
+                                <div class="col-md-4">
                                     <h5 class="education-quarter">Completed Courses</h5>
                                     <h6 class="education-class">CSCI 247 - Computer Systems I</h6>
                                     <h6 class="education-class">CSCI 301 - Formal Language & Functional Programming</h6>
@@ -257,13 +276,23 @@
                                     <h6 class="education-class">CSCI 367 - Computer Networks I</h6>
                                     <h6 class="education-class">CSCI 511 - Analysis of Algorithms</h6>
                                 </div>
-                                <div class="col-sm-6">
+                                <div class="col-md-4">
                                     <h5 clsas="education-quarter">Current Courses</h5>
                                     <h6 class="education-class">CSCI 491 - Senior Series I</h6>
                                     <h6 class="education-class">CSCI 509 - Operating System Internals</h6>
                                     <h6 class="education-class">CSCI 510 - Automata and Formal Language Theory</h6>
                                 </div>
-                                <div class="col-md-12">
+                                <div class="col-md-4">
+                                    <h5 clsas="education-quarter">Future Courses</h5>
+                                    <h6 class="education-class">CSCI 520 - Advanced Compiler Design</h6>
+                                    <h6 class="education-class">CSCI 597J - Deep Learning</h6>
+                                    <h6 class="education-class">CSCI 597P - Computer Vision</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="col-md-6">
                                     <h6 class="education-class">MATH 204 - Elementary Linear Algebra</h6>
                                     <h6 class="education-class">MATH 331 - Oridnary Differential Equations</h6>
                                     <h6 class="education-class">MATH 341 - Probability and Statistics</h6>
@@ -333,20 +362,6 @@
                         </div>
                         <div class="row">
                             <form action="mailto:matthew@macarter.net" method="post" type="text/plain" class="contact-form">
-                            <!--
-                                <fieldset class="col-md-4 col-sm-6">
-                                    <input type="text" id="your-name" placeholder="Your Name...">
-                                </fieldset>
-                                <fieldset class="col-md-4 col-sm-6">
-                                    <input type="email" id="email" placeholder="Your Email...">
-                                </fieldset>
-                                <fieldset class="col-md-4 col-sm-12">
-                                    <input type="text" id="your-subject" placeholder="Subject...">
-                                </fieldset>
-                                <fieldset class="col-md-12 col-sm-12">
-                                    <textarea name="message" id="message" cols="30" rows="6" placeholder="Leave your message..."></textarea>
-                                </fieldset>
-                            -->
                                 <fieldset class="col-md-12 col-sm-12">
                                     <input type="submit" class="button big default" value="Send Message">
                                 </fieldset>
