--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                     <li><a href="#contact"><i class="fa fa-link"></i>Contact Me</a></li>
                 </ul>
             </div> <!-- .main-navigation -->
-            <button class="btn">
+            <div class="button resume-btn">
                 <a href="static/Matthew_Carter_Resume.pdf" target="_blank" download><i class="fa fa-download"></i> Resume</a>
-            </button>
+            </div>
             <div class="social-icons">
                 <ul>
                     <li><a href="https://www.linkedin.com/in/matthew-a-carter/"><i class="fa fa-linkedin"></i></a></li>
@@ -360,7 +360,7 @@
                                 <p>If you're interested in getting in touch with me please click the button below or feel free to email me directly at matthew@macarter.net.</p>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="button">
                             <form action="mailto:matthew@macarter.net" method="post" type="text/plain" class="contact-form">
                                 <fieldset class="col-md-12 col-sm-12">
                                     <input type="submit" class="button big default" value="Send Message">
